# ai-ollama

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
examples/: c01-simple.rs  c02-context.rs  c03-chat.rs  c04-embeddings.rs
src/: lib.rs
